--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 <body>
 	<main>
 		<div class="ba-container">
-			<div class="editor-enter">
+			
 				<div class="editor-text">
 					<h2>Hello!</h2>
 					<h4>We are glad to see you!</h4>
-					<textarea class="editor-field" hidden>How are you?</textarea>
+					
 				</div>
 				<!-- /.editor-text -->
-			</div>
-			<!-- /.editor-enter -->
+				<textarea class="editor-field">How are you?</textarea>
+			
 		</div>
 		<!-- /.ba-container -->
 	</main>
